<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="shirley.com.sudoku.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <Button
        android:id="@+id/menu_level1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_selector"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:textSize="16dp"
        android:text="@string/level1"/>

    <Button
        android:id="@+id/menu_level2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_btn_selector"
        android:textSize="16dp"
        android:padding="5dp"
        android:text="@string/level2"/>

    <Button
        android:id="@+id/menu_level3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_btn_selector"
        android:textSize="16dp"
        android:padding="5dp"
        android:text="@string/level3"/>

    <Button
        android:id="@+id/menu_level4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="16dp"
        android:padding="5dp"
        android:background="@drawable/bg_btn_selector"
        android:text="@string/level4"/>

    </LinearLayout>

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sudoku_help"/>

</RelativeLayout>
